--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,6 +43,10 @@
 }
 
 @layer base {
+    [x-cloak] {
+        display: none !important;
+    }
+
     :root {
         --sidebar-background: 210 20% 98%;
         --sidebar-foreground: 215 25% 27%;
