Refactor layout and styling in various components for improved consistency and usability
- Updated CSS styles for headings and lists to enhance visual consistency across the application.
- Modified the breadcrumb component to include additional padding for better spacing.
- Refactored the content block component to handle null content gracefully and improved its layout structure.
- Enhanced the security badge component's styling for better visibility and positioning.
- Adjusted the main layout and port show view to improve content organization and responsiveness.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -113,7 +113,13 @@ html {
   line-height: 1.75rem;
   letter-spacing: -0.025em;
   font-weight: 500;
-  margin-top: 2.5rem;
+}
+
+.prose h4 {
+  font-size: 1.1rem;
+  line-height: 1.75rem;
+  letter-spacing: -0.025em;
+  font-weight: 500;
 }
 
 .prose a {
@@ -153,12 +159,12 @@ html {
 .dark .prose ol li::marker {
   color: rgb(156 163 175);
 }
-
+/*
 .prose ul {
   list-style-type: disc;
   margin-left: 1.5rem;
 }
-
+*/
 .prose ul li {
   padding-left: 0.625rem;
 }
